fixing issues and resetting code for 05-03 for going forward